--- a/index.html
+++ b/index.html
@@ -223,12 +223,15 @@
 						  <h3 style="margin-top: 0;">Tech</h3>
 						  <ul style="list-style: disc; padding-left: 1.5rem; margin: 0;">
 							<li>Desarrollo Full-Stack</li>
-							<li>Ciberseguridad</li>
 							<li>AI, DevOps y ML</li>
 							<li>Computación en la nube</li>
-							<li>Desarrollo de aplicaciones móviles</li>
 							<li>Python y SQL</li>
 							<li>JavaScript y React.js</li>
+							<li>Scraping y Automatización</li>
+							<li>Gestión de Bases de Datos</li>
+							<li>Frameworks Backend (Django, Flask)</li>
+							<li>Frontend con React.js, Redux y Vue.js</li>
+							<li>CI/CD y Gestión de Versiones (Git, GitHub, GitLab)</li>
 						  </ul>
 						</div>
 				  
@@ -246,14 +249,16 @@
 						  ">
 							<h3 style="margin-top: 0;">Soft</h3>
 							<ul style="list-style: disc; padding-left: 1.5rem; margin: 0;">
-							  <li>Comunicación efectiva</li>
-							  <li>Adaptabilidad</li>
-							  <li>Resolución de problemas</li>
-							  <li>Trabajo en equipo</li>
-							  <li>Liderazgo</li>
-							  <li>Pensamiento estratégico</li>
-							  <li>Escucha activa</li>
-							  <li>Curiosidad</li>
+								<li>Comunicación efectiva</li>
+								<li>Adaptabilidad</li>
+								<li>Resolución de problemas</li>
+								<li>Trabajo en equipo</li>
+								<li>Liderazgo</li>
+								<li>Pensamiento estratégico</li>
+								<li>Escucha activa</li>
+								<li>Curiosidad</li>
+								<li>Gestión del tiempo</li>
+								<li>Empatía</li>
 							</ul>
 						  </div>
 						</div>
