add link ok networks

--- a/index.html
+++ b/index.html
@@ -750,9 +750,9 @@
 							</li> -->
 							<li>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
+									<li><a href="https://www.linkedin.com/in/david-palma-lugo-b53388105/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/Tekorita" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://gitlab.com/DavidPalmaLugo" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 								</ul>
 							</li>
 						</ul>
@@ -772,47 +772,44 @@
 								</p>
 								<ul>
 									<li><h6><i class="icon ion-logo-whatsapp"></i><strong>+(56) 981303177</strong></h6></li>
-									<li><h6><i class="material-icons tiny">call</i><strong>+(58) 4242364606</strong></h6></li>
 									<li><h6><i class="material-icons tiny">mail</i><strong>davidpalmalugo@gmail.com</strong></h6></li>
 								</ul>	
 							</div>
 							<div class="col s12 m6 l6 wow swing" data-wow-duration="1.4s" data-wow-delay="0.3s">
 								<ul class="collapsible z-depth-5 custom-collapsible-contacto">
 									<li>
-											<div class="collapsible-header"><i class="material-icons">mail</i><h6>Contactame</h6><i class="material-icons right">keyboard_arrow_down</i></div>
-											<div class="collapsible-body">					      		
-													<form>
-														<div class="row">
-														<div class="input-field col s6">
-																<input id="first_name" type="text" class="validate white-text">
-																<label for="first_name" class="white-text"><h6>Nombre</h6></label>
-														</div>
-														<div class="input-field col s6">
-																<input id="email" type="email" class="validate white-text">
-																<label for="email" class="white-text"><h6>Email</h6></label>
-														</div>
-														</div>
-														<div class="row">
-														<div class="input-field col s12">
-																<input id="asunto" type="text" class="validate white-text">
-																<label for="asunto" class="white-text"><h6>Asunto</h6></label>
-														</div>
-														</div>  
-														<div class="row">
-														<div class="input-field col s12">
-															<textarea id="textarea2" class="materialize-textarea white-text" data-length="120"></textarea>
-															<label for="textarea2" class="white-text"><h6>Mensaje</h6></label>
-														</div>
-														</div>
-														<div class="row center">
-															<button class="btn waves-effect waves-light center" type="submit" name="action">Enviar
-															<i class="material-icons right">send</i>
-															</button>
-														</div>      
-												</form>
-			
-			
-											</div>
+										<div class="collapsible-header"><i class="material-icons">mail</i><h6>Contactame</h6><i class="material-icons right">keyboard_arrow_down</i></div>
+										<div class="collapsible-body">					      		
+												<form>
+													<div class="row">
+													<div class="input-field col s6">
+															<input id="first_name" type="text" class="validate white-text">
+															<label for="first_name" class="white-text"><h6>Nombre</h6></label>
+													</div>
+													<div class="input-field col s6">
+															<input id="email" type="email" class="validate white-text">
+															<label for="email" class="white-text"><h6>Email</h6></label>
+													</div>
+													</div>
+													<div class="row">
+													<div class="input-field col s12">
+															<input id="asunto" type="text" class="validate white-text">
+															<label for="asunto" class="white-text"><h6>Asunto</h6></label>
+													</div>
+													</div>  
+													<div class="row">
+													<div class="input-field col s12">
+														<textarea id="textarea2" class="materialize-textarea white-text" data-length="120"></textarea>
+														<label for="textarea2" class="white-text"><h6>Mensaje</h6></label>
+													</div>
+													</div>
+													<div class="row center">
+														<button class="btn waves-effect waves-light center" type="submit" name="action">Enviar
+														<i class="material-icons right">send</i>
+														</button>
+													</div> 
+											</form>
+										</div>
 									</li>
 									<li>
 									<div class="collapsible-header"><i class="material-icons">pan_tool</i><h6>Sugerencias</h6><i class="material-icons right">keyboard_arrow_down</i></div>
