--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 							<video 
 							  class="responsive-video" 
 							  style="border-radius: 0; display: block; max-width: 100%; height: auto;" 
-							  controls 
+							  playsinline
 							  autoplay 
 							  loop 
 							  muted
@@ -344,7 +344,7 @@
 							<video 
 							class="responsive-video" 
 							style="border-radius: 0; display: block; max-width: 100%; height: auto;" 
-							controls 
+							playsinline
 							autoplay 
 							loop 
 							muted
@@ -406,7 +406,7 @@
 							<video 
 							class="responsive-video" 
 							style="border-radius: 0; display: block; max-width: 100%; height: auto;" 
-							controls 
+							playsinline
 							autoplay 
 							loop 
 							muted
@@ -444,7 +444,9 @@
 						</ul>
 						<p style="margin-top: 5px;">
 							<strong>Repositorio:</strong>
-							<em>(privado / no disponible actualmente)</em>
+							<a target="_blank" href="https://github.com/Tekorita/davidpalmalugo.git">
+							https://github.com/Tekorita/davidpalmalugo.git
+							</a>
 						</p>
 						</div>
 					</div>
@@ -1316,19 +1318,6 @@
 				</section>
   
 			</div>
-
-		<!-- Scripts -->
-			<!-- <script src="static/js/jquery.min.js"></script>
-			<script src="static/js/jquery.scrolly.min.js"></script>
-			<script src="static/js/browser.min.js"></script>
-			<script src="static/js/breakpoints.min.js"></script>
-			<script src="static/js/util.js"></script>
-			<script src="static/js/main.js"></script>
-			<script src="static/js/main2.js"></script>
-			<script src="static/js/materialize.min.js"></script>
-			<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-			<script src="static/js/parallax.js"></script>
-			<script src="static/js/wow.min.js"></script> -->
 
 			<!-- jQuery -->
 			<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
