reverse changes on videos

--- a/index.html
+++ b/index.html
@@ -282,11 +282,10 @@
 							<video 
 							  class="responsive-video" 
 							  style="border-radius: 0; display: block; max-width: 100%; height: auto;" 
+							  controls 
 							  autoplay 
 							  loop 
-							  muted 
-							  playsinline 
-							  preload="auto"
+							  muted
 							>
 							  <source src="https://videos-mi-portfolio.s3.us-east-1.amazonaws.com/cmf_demo.mp4" type="video/mp4">
 							  Tu navegador no soporta la etiqueta de video.
@@ -345,11 +344,10 @@
 							<video 
 								class="responsive-video" 
 								style="border-radius: 0; display: block; max-width: 100%; height: auto;" 
+								controls 
 								autoplay 
 								loop 
-								muted 
-								playsinline 
-								preload="auto"
+								muted
 							>
 							<source src="https://videos-mi-portfolio.s3.us-east-1.amazonaws.com/cat_api_demo.mp4" type="video/mp4">
 							Tu navegador no soporta la etiqueta de video.
@@ -408,11 +406,10 @@
 							<video 
 								class="responsive-video" 
 								style="border-radius: 0; display: block; max-width: 100%; height: auto;" 
+								controls 
 								autoplay 
 								loop 
-								muted 
-								playsinline 
-								preload="auto"
+								muted
 							>
 							<source src="https://videos-mi-portfolio.s3.us-east-1.amazonaws.com/portafolio_demo.mp4" type="video/mp4">
 							Tu navegador no soporta la etiqueta de video.
@@ -1403,16 +1400,5 @@
 				sliderTrack.style.animationPlayState = isPaused ? 'paused' : 'running';
 				});
 			</script>
-			<script>
-				document.addEventListener("DOMContentLoaded", function () {
-				  const videos = document.querySelectorAll("video[autoplay]");
-				  videos.forEach(video => {
-					video.play().catch(error => {
-					  // Algunos navegadores bloquean la reproducción automática sin interacción
-					  console.warn("Autoplay bloqueado en móvil:", error);
-					});
-				  });
-				});
-			  </script>
 	</body>
 </html>
