--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 						<h3 style="margin-top: 0;">Tech</h3>
 						<ul style="list-style-type: disc; padding-left: 1.5rem; margin: 0;">
 							<li>Arquitectura de aplicaciones web</li>
-							<li>Python, SQL, Flask Django REST Framework</li>
+							<li>Python, Flask, Django REST Framework</li>
 							<li>Scraping (Selenium, BeautifulSoup, Scrapy)</li>
 							<li>Procesamiento de datos con ETL</li>
 							<li>JavaScript, React.js, TypeScript y Vue.js</li>
