add new certificados

--- a/index.html
+++ b/index.html
@@ -986,15 +986,15 @@
 						<div class="col s12 m6">
 						  <img 
 							class="responsive-img materialboxed"
-							src="static/imagenes/CertificadoEtl.jpg" 
-							alt="Certificado ETL e Ingesta de Datos con Python"
+							src="static/imagenes/CertificadoLangchain.jpg" 
+							alt="Certificado Langchain IA"
 						  />	
 						</div>
 						<div class="col s12 m6">
 						  <img 
 							class="responsive-img materialboxed"
-							src="static/imagenes/CertificadoDocker.jpg" 
-							alt="Certificado Docker Fundamentos"
+							src="static/imagenes/CertificadoEtl.jpg" 
+							alt="Certificado ETL e Ingesta de Datos con Python"
 						  />
 						</div>
 					  </div>
@@ -1004,8 +1004,26 @@
 						<div class="col s12 m6">
 						  <img 
 							class="responsive-img materialboxed" 
+							src="static/imagenes/CertificadoDocker.jpg" 
+							alt="Certificado Docker Fundamentos"
+						  />
+						</div>
+						<div class="col s12 m6">
+						  <img 
+							class="responsive-img materialboxed"
 							src="static/imagenes/CertificadoDatosLineales.jpg" 
 							alt="Certificado Estructuras de Datos Lineales con Python"
+						  />
+						</div>
+					  </div>
+
+					  <!-- Tercera fila: 2 imágenes -->
+					  <div class="row" style="margin: 0;">
+						<div class="col s12 m6">
+						  <img 
+							class="responsive-img materialboxed" 
+							src="static/imagenes/CertificadoComputacionalPython.jpg" 
+							alt="Certificado de pensamiento computacional en python"
 						  />
 						</div>
 						<div class="col s12 m6">
