--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 							<li>Python, Flask, Django REST Framework</li>
 							<li>Scraping (Selenium, BeautifulSoup, Scrapy)</li>
 							<li>Procesamiento de datos con ETL</li>
-							<li>JavaScript, React.js, TypeScript y Vue.js</li>
+							<li>JavaScript, TypeScript, React.js, Vue.js y Angular</li>
 							<li>Integración de LLMs y LangChain</li>
 							<li>Embeddings semánticos y bases vectoriales (Chroma)</li>
 							<li>Construcción de chatbots inteligentes</li>
