--- a/index.html
+++ b/index.html
@@ -219,16 +219,17 @@
 						<h3 style="margin-top: 0;">Tech</h3>
 						<ul style="list-style-type: disc; padding-left: 1.5rem; margin: 0;">
 							<li>Arquitectura de aplicaciones web</li>
-							<li>Python, Flask, Django REST Framework</li>
+							<li>Python, Flask, Django REST Framework, GraphQL</li>
 							<li>Scraping (Selenium, BeautifulSoup, Scrapy)</li>
 							<li>Procesamiento de datos con ETL</li>
 							<li>JavaScript, TypeScript, React.js, Vue.js y Angular</li>
+							<li>Desarrollo de apps mobiles (Flutter, React Native)</li>
 							<li>Integración de LLMs y LangChain</li>
 							<li>Embeddings semánticos y bases vectoriales (Chroma)</li>
 							<li>Construcción de chatbots inteligentes</li>
-							<li>Gestión de bases de datos relacionales y no relacionales (PostgreSQL, MySQL, MongoDB)</li>
-							<li>CI/CD, Docker, Git, GitHub Actions</li>
-							<li>Deploy y manejo de servicios (AWS, Vercel, Heroku)</li>
+							<li>Gestión de bases de datos (PostgreSQL, MySQL, MongoDB)</li>
+							<li>CI/CD, Docker, Git, GitHub Actions, Workflows y Pipelines</li>
+							<li>Deploy y manejo de servicios AWS(Eb,Ec2,RDS,IAM,AWS Amplify, Lambdas)</li>
 						</ul>
 						</div>
 				
