--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<h2 class="wow bounceInLeft" data-wow-duration="1.4s" data-wow-delay="0.1s">Sobre mi</h2>
 					</header>
 					<div class="content wow fadeIn" data-wow-duration="1.4s" data-wow-delay="0.6s" style="padding: 2rem 3rem 0rem;">
-						<p><strong>Ingeniero en Informática y Programador Full Stack</strong> con más de 7 años de experiencia desarrollando aplicaciones web escalables, combinando <strong>backend en Python</strong> y <strong>frontend en React</strong> con <strong>Javascript</strong> y <strong>Typescript</strong>. He trabajado en proyectos de <strong>procesamiento y análisis de datos</strong>, <strong>scraping</strong>, <strong>ETL</strong> y automatización de procesos.</p>
+						<p><strong>Ingeniero en Informática y Programador Full Stack</strong> con más de 7 años de experiencia desarrollando aplicaciones web escalables, combinando <strong>backend en Python</strong> y <strong>frontend en React</strong> con <strong>Javascript</strong> y <strong>Typescript</strong> y apps moviles con (Flutter y React Native). He trabajado en proyectos de <strong>procesamiento y análisis de datos</strong>, <strong>scraping</strong>, <strong>ETL</strong> y automatización de procesos.</p>
 
 						<p>También integro <strong>inteligencia artificial</strong> en aplicaciones reales, usando <strong>LangChain</strong> para implementar distintos <strong>LLM</strong>, <strong>embeddings semánticos</strong> y <strong>bases vectoriales (Chroma)</strong> para construir chatbots con memoria y capacidades de lenguaje natural.</p>
 
