add item in project cat api

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
 							<li><strong>Backend:</strong> Python, Django</li>
 							<li><strong>Frontend:</strong> React.js (con Vite), TypeScript, MUI Material</li>
 							<li><strong>Consumo API:</strong> https://api.thecatapi.com</li>
+							<li><strong>Contenedores:</strong> Docker, Docker Compose</li>
 							<li><strong>Almacenamiento:</strong> AWS S3 (video de demostración)</li>
 						</ul>
 						<p style="margin-top: 5px;">
