--- a/index.html
+++ b/index.html
@@ -384,8 +384,8 @@
 						</ul>
 						<p style="margin-top: 5px;">
 							<strong>Link de app:</strong>
-							<a target="_blank" href="https://bt0sjhxc-3000.brs.devtunnels.ms/t">
-							https://bt0sjhxc-3000.brs.devtunnels.ms/t
+							<a target="_blank" href="https://bt0sjhxc-3000.brs.devtunnels.ms/">
+							https://bt0sjhxc-3000.brs.devtunnels.ms/
 							</a>
 						</p>
 						<p style="margin-top: 5px;">
