add new experience

--- a/index.html
+++ b/index.html
@@ -120,6 +120,26 @@
 					<!-- CHILE -->
 					<div id="test-swipe-1" class="tab-content">
 						<div style="margin-bottom: 1.5rem;">
+							<h3 style="color: #D94442; font-weight: bold;">MAXXA</h3>
+							<strong data-es="Rol:" data-en="Role:">Rol:</strong>
+							<span data-es="Software Engineer Semi Senior"
+								data-en="Software Engineer Semi Senior">
+								Software Engineer Semi Senior
+							</span><br>
+							<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
+							<span data-es="07/2025 – Actualidad, Santiago Centro, Chile"
+								data-en="07/2025 – Present, Santiago Centro, Chile">
+								07/2025 – Actualidad, Santiago Centro, Chile
+							</span>
+							<ul>
+								<li data-es="<strong>Funciones principales:</strong> Integrante del equipo de core-créditos, desarrollando y mejorando servicios financieros escalables y participando activamente en la automatización de procesos, resolución de incidentes críticos y optimización de consultas SQL."
+									data-en="<strong>Main responsibilities:</strong> Member of the core-credit team, developing and improving scalable financial services, actively participating in process automation, critical incident resolution, and SQL query optimization.">
+									<strong>Funciones principales:</strong> Integrante del equipo de core-créditos, desarrollando y mejorando servicios financieros escalables y participando activamente en la automatización de procesos, resolución de incidentes críticos y optimización de consultas SQL.
+								</li>
+							</ul>
+						</div>						
+
+						<div style="margin-bottom: 1.5rem;">
 						<h3 style="color: #D94442; font-weight: bold;">Abaqus</h3>
 						<strong data-es="Rol:" data-en="Role:">Rol:</strong>
 						<span data-es="Programador Full Stack, Desarrollador líder de proyecto"
