Actualizar Skills: agregar SQLAlchemy, eliminar Vue.js y Flutter

--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
 						<h3 data-es="Tech" data-en="Tech" style="margin-top: 0;">Tech</h3>
 						<ul style="list-style-type: disc; padding-left: 1.5rem; margin: 0;">
 							<li data-es="Arquitectura de aplicaciones web" data-en="Web application architecture">Arquitectura de aplicaciones web</li>
-							<li data-es="Python, Flask, Django REST Framework, GraphQL" data-en="Python, Flask, Django REST Framework, GraphQL">Python, Flask, Django REST Framework, GraphQL</li>
+							<li data-es="Python, Flask, Django REST Framework, GraphQL, SQLAlchemy" data-en="Python, Flask, Django REST Framework, GraphQL, SQLAlchemy">Python, Flask, Django REST Framework, GraphQL, SQLAlchemy</li>
 							<li data-es="Scraping (Selenium, BeautifulSoup, Scrapy)" data-en="Scraping (Selenium, BeautifulSoup, Scrapy)">Scraping (Selenium, BeautifulSoup, Scrapy)</li>
 							<li data-es="Procesamiento de datos con ETL" data-en="Data processing with ETL">Procesamiento de datos con ETL</li>
-							<li data-es="JavaScript, TypeScript, React.js, Vue.js y Angular" data-en="JavaScript, TypeScript, React.js, Vue.js and Angular">JavaScript, TypeScript, React.js, Vue.js y Angular</li>
-							<li data-es="Desarrollo de apps mobiles (Flutter, React Native)" data-en="Mobile app development (Flutter, React Native)">Desarrollo de apps mobiles (Flutter, React Native)</li>
+							<li data-es="JavaScript, TypeScript, React.js y Angular" data-en="JavaScript, TypeScript, React.js and Angular">JavaScript, TypeScript, React.js y Angular</li>
+							<li data-es="Desarrollo de apps mobiles (React Native)" data-en="Mobile app development (React Native)">Desarrollo de apps mobiles (React Native)</li>
 							<li data-es="Integración de LLMs y LangChain" data-en="LLMs and LangChain integration">Integración de LLMs y LangChain</li>
 							<li data-es="Embeddings semánticos y bases vectoriales (Chroma)" data-en="Semantic embeddings and vector databases (Chroma)">Embeddings semánticos y bases vectoriales (Chroma)</li>
 							<li data-es="Construcción de chatbots inteligentes" data-en="Building intelligent chatbots">Construcción de chatbots inteligentes</li>
