--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 						<div style="margin-bottom: 1.5rem;">
 							<h3 style="color: #D94442; font-weight: bold;">MAXXA</h3>
 							<strong data-es="Rol:" data-en="Role:">Rol:</strong>
-							<span data-es="Software Engineer Semi Senior"
-								data-en="Software Engineer Semi Senior">
-								Software Engineer Semi Senior
+							<span data-es="Software Engineer"
+								data-en="Software Engineer">
+								Software Engineer
 							</span><br>
 							<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
 							<span data-es="07/2025 – Actualidad, Santiago Centro, Chile"
