update direction of jobs

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
 								Software Engineer
 							</span><br>
 							<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
-							<span data-es="07/2025 – Actualidad, Santiago Centro, Chile"
-								data-en="07/2025 – Present, Santiago Centro, Chile">
-								07/2025 – Actualidad, Santiago Centro, Chile
+							<span data-es="06/2025 – 12/2025, Av. Apoquindo 6550, piso 16, Las Condes, Santiago de Chile"
+								data-en="06/2025 – 12/2025, Av. Apoquindo 6550, piso 16, Las Condes, Santiago de Chile">
+								06/2025 – 12/2025, Av. Apoquindo 6550, piso 16, Las Condes, Santiago de Chile
 							</span>
 							<ul>
 								<li data-es="<strong>Funciones principales:</strong> Integrante del equipo de core-créditos, desarrollando y mejorando servicios financieros escalables y participando activamente en la automatización de procesos, resolución de incidentes críticos y optimización de consultas SQL."
@@ -147,9 +147,9 @@
 							Programador Full Stack, Desarrollador líder de proyecto
 						</span><br>
 						<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
-						<span data-es="11/2021 – 09/2024, Isidora Goyenechea 3477, Oficina 70B, Las Condes, Chile"
-								data-en="11/2021 – 09/2024, Isidora Goyenechea 3477, Office 70B, Las Condes, Chile">
-							11/2021 – 09/2024, Isidora Goyenechea 3477, Oficina 70B, Las Condes, Chile
+						<span data-es="11/2021 – 09/2024, Isidora Goyenechea 3477, Oficina 70B, Las Condes, Santiago de Chile"
+								data-en="11/2021 – 09/2024, Isidora Goyenechea 3477, Office 70B, Las Condes, Santiago de Chile">
+							11/2021 – 09/2024, Isidora Goyenechea 3477, Oficina 70B, Las Condes, Santiago de Chile
 						</span>
 						<ul>
 							<li data-es="<strong>Funciones principales:</strong> Encargado del desarrollo y liderazgo técnico del proyecto para el procesamiento de fichas técnicas y series de fondos de inversión para las AGF de Banco Estado y Banco de Chile. Implementación de mejoras en procesos de cálculo y carga de datos, migración de infraestructura, creación de tests unitarios y refactorización de componentes clave. Coordinación directa con clientes para levantamiento de requerimientos, desarrollo de nuevas funcionalidades y corrección de errores. Colaboración activa con otros equipos y proyectos de Abaqus en backend y frontend."
@@ -168,9 +168,9 @@
 						<strong data-es="Rol:" data-en="Role:">Rol:</strong>
 						<span data-es="Programador Full Stack" data-en="Full Stack Developer">Programador Full Stack</span><br>
 						<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
-						<span data-es="07/2019 – 11/2021, Badajoz 45, Las Condes, Región Metropolitana"
-								data-en="07/2019 – 11/2021, Badajoz 45, Las Condes, Santiago">
-							07/2019 – 11/2021, Badajoz 45, Las Condes, Región Metropolitana
+						<span data-es="07/2019 – 11/2021, Badajoz 45, Las Condes, Santiago de Chile"
+								data-en="07/2019 – 11/2021, Badajoz 45, Las Condes, Santiago de Chile">
+							07/2019 – 11/2021, Badajoz 45, Las Condes, Santiago de Chile
 						</span>
 						<ul>
 							<li data-es="<strong>Funciones principales:</strong> Desarrollo del proceso completo de scraping y procesamiento de datos de ventas y stock en más de 40 portales B2B. Mantenimiento de scripts ante cambios estructurales en sitios, corrección de errores de carga, tareas de frontend y colaboración en nuevos proyectos para distintos equipos."
@@ -189,9 +189,9 @@
 						<strong data-es="Rol:" data-en="Role:">Rol:</strong>
 						<span data-es="Programador Frontend" data-en="Frontend Developer">Programador Frontend</span><br>
 						<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
-						<span data-es="04/2019 - 07/2019, Av. El Coihue 4117, Vitacura, Región Metropolitana"
-								data-en="04/2019 - 07/2019, Av. El Coihue 4117, Vitacura, Santiago">
-							04/2019 - 07/2019, Av. El Coihue 4117, Vitacura, Región Metropolitana
+						<span data-es="04/2019 - 07/2019, Av. El Coihue 4117, Vitacura, Santiago de Chile"
+								data-en="04/2019 - 07/2019, Av. El Coihue 4117, Vitacura, Santiago de Chile">
+							04/2019 - 07/2019, Av. El Coihue 4117, Vitacura, Santiago de Chile
 						</span>
 						<ul>
 							<li data-es="<strong>Funciones principales:</strong> Desarrollo de nuevas funcionalidades UI para la plataforma de campañas, colaboración con el equipo de diseño, optimización de vistas y experiencia de usuario."
