add exprience of talana

--- a/index.html
+++ b/index.html
@@ -120,11 +120,31 @@
 					<!-- CHILE -->
 					<div id="test-swipe-1" class="tab-content">
 						<div style="margin-bottom: 1.5rem;">
+							<h3 style="color: #D94442; font-weight: bold;">TALANA</h3>
+							<strong data-es="Rol:" data-en="Role:">Rol:</strong>
+							<span data-es="Ingeniero de Desarrollo de Software"
+								data-en="Software Developer Engineer">
+								Ingeniero de Desarrollo de Software
+							</span><br>
+							<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
+							<span data-es="02/2026 – Actualidad, Los Militares 4777, piso 10, Las Condes, Santiago de Chile"
+								data-en="02/2026 – Present, Los Militares 4777, floor 10, Las Condes, Santiago de Chile">
+								02/2026 – Actualidad, Los Militares 4777, piso 10, Las Condes, Santiago de Chile
+							</span>
+							<ul>
+								<li data-es="<strong>Funciones principales:</strong> Integrante del equipo de desarrollo backend, participando en el diseño, desarrollo y mantenimiento de APIs y servicios escalables para la plataforma de gestión de personas de Talana. Trabajo enfocado en arquitectura orientada a servicios, calidad de código, optimización de consultas SQL y resolución de incidentes en producción, colaborando con equipos multidisciplinarios en entornos ágiles."
+									data-en="<strong>Main responsibilities:</strong> Member of the backend development team, participating in the design, development, and maintenance of APIs and scalable services for Talana's people management platform. Work focused on service-oriented architecture, code quality, SQL query optimization, and production incident resolution, collaborating with multidisciplinary teams in agile environments.">
+									<strong>Funciones principales:</strong> Integrante del equipo de desarrollo backend, participando en el diseño, desarrollo y mantenimiento de APIs y servicios escalables para la plataforma de gestión de personas de Talana. Trabajo enfocado en arquitectura orientada a servicios, calidad de código, optimización de consultas SQL y resolución de incidentes en producción, colaborando con equipos multidisciplinarios en entornos ágiles.
+								</li>
+							</ul>
+						</div>
+
+						<div style="margin-bottom: 1.5rem;">
 							<h3 style="color: #D94442; font-weight: bold;">MAXXA</h3>
 							<strong data-es="Rol:" data-en="Role:">Rol:</strong>
-							<span data-es="Software Engineer"
-								data-en="Software Engineer">
-								Software Engineer
+							<span data-es="Programador Full Stack"
+								data-en="Full Stack Developer">
+								Programador Full Stack
 							</span><br>
 							<strong data-es="Fecha:" data-en="Date:">Fecha:</strong>
 							<span data-es="06/2025 – 12/2025, Av. Apoquindo 6550, piso 16, Las Condes, Santiago de Chile"
@@ -135,6 +155,10 @@
 								<li data-es="<strong>Funciones principales:</strong> Integrante del equipo de core-créditos, desarrollando y mejorando servicios financieros escalables y participando activamente en la automatización de procesos, resolución de incidentes críticos y optimización de consultas SQL."
 									data-en="<strong>Main responsibilities:</strong> Member of the core-credit team, developing and improving scalable financial services, actively participating in process automation, critical incident resolution, and SQL query optimization.">
 									<strong>Funciones principales:</strong> Integrante del equipo de core-créditos, desarrollando y mejorando servicios financieros escalables y participando activamente en la automatización de procesos, resolución de incidentes críticos y optimización de consultas SQL.
+								</li>
+								<li data-es="<strong>Logros clave:</strong> Desarrollé y mantuve servicios críticos del core de créditos, implementando módulos como condonación de intereses de mora, control de deudas TGR y cálculo de tasas de interés en créditos FOGAPE, optimizando consultas en PostgreSQL y mejorando la estabilidad y performance de procesos transaccionales en producción."
+									data-en="<strong>Key achievements:</strong> Developed and maintained critical services of the credit core, implementing modules such as late interest forgiveness, TGR debt control, and interest rate calculation for FOGAPE credits, optimizing PostgreSQL queries and improving stability and performance of transactional processes in production.">
+									<strong>Logros clave:</strong> Desarrollé y mantuve servicios críticos del core de créditos, implementando módulos como condonación de intereses de mora, control de deudas TGR y cálculo de tasas de interés en créditos FOGAPE, optimizando consultas en PostgreSQL y mejorando la estabilidad y performance de procesos transaccionales en producción.
 								</li>
 							</ul>
 						</div>						
